# TactilityApps

./: .gitignore  release.py
.github/workflows/: main.yml
Apps/AHT10Sensor/: CMakeLists.txt  manifest.properties
Apps/Brainfuck/: CMakeLists.txt  README.md  manifest.properties
Apps/Breakout/: CMakeLists.txt  README.md  manifest.properties
Apps/Calculator/: manifest.properties
Apps/Diceware/: manifest.properties
Apps/M5UnitTest/main/: CMakeLists.txt
Apps/M5UnitTest/main/Source/: GroveLookup.cpp  GroveLookup.h  M5UnitTest.cpp  M5UnitTest.h  TestListView.cpp  TestListView.h  TestUnit8Encoder.cpp  TestUnit8Encoder.h  TestUnitByteButton.cpp  TestUnitByteButton.h  TestUnitCardKB2.cpp  TestUnitCardKB2.h  TestUnitDualButton.cpp  TestUnitDualButton.h  TestUnitJoystick2.cpp  TestUnitJoystick2.h  TestUnitLcd.cpp  TestUnitLcd.h  TestUnitLcdGfx.cpp  TestUnitLcdGfx.h  TestUnitMidi.cpp  TestUnitMidi.h  TestUnitPaHub.cpp  TestUnitPaHub.h  TestUnitRfid2.cpp  TestUnitRfid2.h  TestUnitScroll.cpp  TestUnitScroll.h  TestViewBase.cpp  TestViewBase.h  UiScale.h  main.cpp
Apps/MystifyDemo/main/: CMakeLists.txt
Apps/MystifyDemo/main/Include/: MystifyDemo.h
Apps/MystifyDemo/main/Include/drivers/: DisplayDriver.h
Apps/MystifyDemo/main/Source/: Application.cpp  Main.cpp
Apps/TamaTac/main/: CMakeLists.txt
Apps/TamaTac/main/Source/: Achievements.cpp  Achievements.h  CemeteryView.cpp  CemeteryView.h  MainView.cpp  MainView.h  MenuView.cpp  MenuView.h  PatternGame.cpp  PatternGame.h  PetLogic.cpp  PetLogic.h  PetStats.h  ReactionGame.cpp  ReactionGame.h  SettingsView.cpp  SettingsView.h  SpriteData.h  Sprites.h  StatsView.cpp  StatsView.h  TamaTac.cpp  TamaTac.h  main.cpp
Apps/TodoList/main/: CMakeLists.txt
Apps/TodoList/main/Source/: TodoList.cpp  TodoList.h  main.cpp
(+136 files in other folders)
